dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: dev
spec:
  selector:
    app: web # Этот селектор ищет поды с таким же лейблом (мы задали его в nginx.yaml)
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
