dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: web.dev.93.170.73.25.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
